--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "browserify": "latest",
     "derequire": "latest",
+    "express": "^4.14.0",
     "watchify": "latest"
   },
   "scripts": {
